--- a/app/src/main/res/layout/header_test.xml
+++ b/app/src/main/res/layout/header_test.xml
@@ -8,13 +8,14 @@
             type="String" />
     </data>
 
-    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <TextView
+            android:layout_gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@{headerText}" />
-    </android.support.constraint.ConstraintLayout>
+    </FrameLayout>
 </layout>
